overflow fixed, remove margin right on hamburger menu

--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,6 @@ img {
     font-weight: 700;
     color: black;
     font-size: 0.9em;
-    margin-right: 30%;
 }
 
 /* Hamburger menu button */
